
message user_login{
    required string name = 1;
    required string pass = 2;
    
}

